[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Clement Walter <clement.walter@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
kaggle = "^1.5.12"
pandas = "^1.2.3"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
